--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "https://brianhhu.com"
+url: "http://brianhhu.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -28,8 +28,8 @@ navbar-links:
   #  - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   #  - Learn markdown: "http://www.markdowntutorial.com/"
   #  - GitHub Pages: "https://pages.github.com/"
-  CV: "https://brianhhu.com/files/CV_Brian_Hu.pdf"
-  Home: "https://brianhhu.com"
+  CV: "http://brianhhu.github.io/files/CV_Brian_Hu.pdf"
+  Home: "http://brianhhu.github.io"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -87,7 +87,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "brianhhu.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "brianhhu"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
