add research page to navigation bar

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description: Computational neuroscientist interested in vision!
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
+  Research: "research"
   #Resources:
   #  - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   #  - Learn markdown: "http://www.markdowntutorial.com/"
