--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ footer-links-active:
 
 # Select which share links to show in posts
 share-links-active:
-  #twitter: true
-  #facebook: true
-  #google: false
+  twitter: true
+  facebook: true
+  google: false
   linkedin: true
 
 # How to display the link to the website in the footer
